@@ -1,4 +1,4 @@
-/* Copyright (c) 2001-2011, The HSQL Development Group
+/* Copyright (c) 2001-2017, The HSQL Development Group
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -50,7 +50,7 @@ import org.hsqldb.types.Types;
  * Parser for session and management statements
  *
  * @author Fred Toussi (fredt@users dot sourceforge.net)
- * @version 2.3.0
+ * @version 2.3.4
  * @since 1.9.0
  */
 public class ParserCommand extends ParserDDL {
@@ -79,7 +79,7 @@ public class ParserCommand extends ParserDDL {
         HsqlArrayList list = new HsqlArrayList();
         Statement     cs   = null;
 
-        reset(sql);
+        reset(session, sql);
 
         while (true) {
             if (token.tokenType == Tokens.X_ENDPARSE) {
@@ -107,6 +107,12 @@ public class ParserCommand extends ParserDDL {
             list.add(cs);
         }
 
+        if (list.size() > 1) {
+            if (database.sqlRestrictExec) {
+                throw Error.error(ErrorCode.X_07502);
+            }
+        }
+
         int returnType = cmd.getStatementType();
 
         if (returnType != StatementTypes.RETURN_ANY) {
@@ -118,8 +124,11 @@ public class ParserCommand extends ParserDDL {
                 }
             } else if (returnType == StatementTypes.RETURN_RESULT) {
 
-                // allow update count statements to return an empty result set
-                // throw Error.error(ErrorCode.X_07504);
+                // allow update count statements with Statement.executeQuery()
+                // to return an empty result set
+                if (database.sqlRestrictExec) {
+                    throw Error.error(ErrorCode.X_07504);
+                }
             }
         }
 
@@ -183,6 +192,11 @@ public class ParserCommand extends ParserDDL {
             }
             case Tokens.TRUNCATE : {
                 cs = compileTruncateStatement();
+
+                break;
+            }
+            case Tokens.REPLACE : {
+                cs = compileInsertStatement(RangeGroup.emptyArray);
 
                 break;
             }
@@ -291,6 +305,10 @@ public class ParserCommand extends ParserDDL {
                 cs = compileDeclare();
                 break;
 
+            case Tokens.PERFORM :
+                cs = compilePerform();
+                break;
+
             default :
                 throw unexpectedToken();
         }
@@ -318,8 +336,8 @@ public class ParserCommand extends ParserDDL {
 
     private Statement compileDeclare() {
 
-        Statement    cs;
-        ColumnSchema variables[];
+        Statement      cs;
+        ColumnSchema[] variables;
 
         cs = compileDeclareLocalTableOrNull();
 
@@ -337,7 +355,7 @@ public class ParserCommand extends ParserDDL {
             return cs;
         }
 
-        cs = compileDeclareCursor(RangeGroup.emptyArray, false);
+        cs = compileDeclareCursorOrNull(RangeGroup.emptyArray, false);
 
         if (cs == null) {
             throw lastError == null ? unexpectedToken()
@@ -389,7 +407,8 @@ public class ParserCommand extends ParserDDL {
             new ExpressionValue(password, Type.SQL_VARCHAR)
         };
         Statement cs =
-            new StatementSession(StatementTypes.SET_SESSION_AUTHORIZATION,
+            new StatementSession(session, compileContext,
+                                 StatementTypes.SET_SESSION_AUTHORIZATION,
                                  args);
 
         return cs;
@@ -430,11 +449,12 @@ public class ParserCommand extends ParserDDL {
                 read();
                 readThis(Tokens.TYPE);
 
-                int type = TableBase.MEMORY_TABLE;
+                int type;
 
                 switch (token.tokenType) {
 
                     case Tokens.MEMORY :
+                        type = TableBase.MEMORY_TABLE;
                         break;
 
                     case Tokens.CACHED :
@@ -524,8 +544,6 @@ public class ParserCommand extends ParserDDL {
 
     private Statement compileSet() {
 
-        int position = super.getPosition();
-
         read();
 
         switch (token.tokenType) {
@@ -555,7 +573,8 @@ public class ParserCommand extends ParserDDL {
 
                 Expression[] args = new Expression[]{ e };
 
-                return new StatementSession(StatementTypes.SET_CATALOG, args);
+                return new StatementSession(session, compileContext,
+                                            StatementTypes.SET_CATALOG, args);
             }
             case Tokens.SCHEMA : {
                 read();
@@ -570,19 +589,35 @@ public class ParserCommand extends ParserDDL {
                                                 args);
                 }
 
+                if (e.isUnresolvedParam()) {
+                    e.setDataType(session, Type.SQL_VARCHAR_DEFAULT);
+                }
+
                 if (!e.getDataType().isCharacterType()) {
                     throw Error.error(ErrorCode.X_0P000);
                 }
 
-                if (e.getType() != OpTypes.VALUE
-                        && (e.getType() != OpTypes.SQL_FUNCTION
-                            || !((FunctionSQL) e).isValueFunction())) {
-                    throw Error.error(ErrorCode.X_0P000);
+                switch (e.getType()) {
+
+                    case OpTypes.PARAMETER :
+                    case OpTypes.DYNAMIC_PARAM :
+                    case OpTypes.VALUE :
+                        break;
+
+                    case OpTypes.SQL_FUNCTION :
+                        if (((FunctionSQL) e).isValueFunction()) {
+                            break;
+                        }
+
+                    // fall through
+                    default :
+                        throw Error.error(ErrorCode.X_0P000);
                 }
 
                 Expression[] args = new Expression[]{ e };
 
-                return new StatementSession(StatementTypes.SET_SCHEMA, args);
+                return new StatementSession(session, compileContext,
+                                            StatementTypes.SET_SCHEMA, args);
             }
             case Tokens.NO : {
                 read();
@@ -725,11 +760,12 @@ public class ParserCommand extends ParserDDL {
                 readThis(Tokens.TABLE);
                 readThis(Tokens.TYPE);
 
-                int type = TableBase.MEMORY_TABLE;
+                int type;
 
                 switch (token.tokenType) {
 
                     case Tokens.MEMORY :
+                        type = TableBase.MEMORY_TABLE;
                         break;
 
                     case Tokens.CACHED :
@@ -764,7 +800,7 @@ public class ParserCommand extends ParserDDL {
 
                     read();
                 } else {
-                    delay = this.readInteger();
+                    delay = readInteger();
 
                     if (delay < 0) {
                         delay = 0;
@@ -777,7 +813,7 @@ public class ParserCommand extends ParserDDL {
                     }
                 }
 
-                Object[] args = new Object[]{ new Integer(delay) };
+                Object[] args = new Object[]{ Integer.valueOf(delay) };
 
                 return new StatementCommand(
                     StatementTypes.SET_DATABASE_FILES_WRITE_DELAY, args, null,
@@ -785,12 +821,12 @@ public class ParserCommand extends ParserDDL {
             }
             case Tokens.PASSWORD : {
                 String  password;
-                boolean isDigest = false;
+                Boolean isDigest = Boolean.FALSE;
 
                 read();
 
                 if (readIfThis(Tokens.DIGEST)) {
-                    isDigest = true;
+                    isDigest = Boolean.TRUE;
                 }
 
                 password = readPassword();
@@ -801,8 +837,8 @@ public class ParserCommand extends ParserDDL {
                 Statement cs =
                     new StatementCommand(StatementTypes.SET_USER_PASSWORD,
                                          args);
-                String sql = User.getSetCurrentPasswordDigestSQL(password,
-                    isDigest);
+                String sql = User.getSetCurrentPasswordDigestSQL(
+                    database.granteeManager, password, isDigest);
 
                 cs.setSQL(sql);
 
@@ -840,8 +876,6 @@ public class ParserCommand extends ParserDDL {
                 return compileSetProperty();
             }
             default : {
-                rewind(position);
-
                 return compileSetStatement(
                     session.sessionContext.sessionVariableRangeGroups,
                     session.sessionContext.sessionVariablesRange);
@@ -855,7 +889,7 @@ public class ParserCommand extends ParserDDL {
 
         Table    table = readTableName();
         Object[] args  = new Object[] {
-            table.getName(), null
+            table.getName(), null, null
         };
 
         switch (token.tokenType) {
@@ -911,6 +945,7 @@ public class ParserCommand extends ParserDDL {
                 read();
 
                 args[1] = value;
+                args[2] = Integer.valueOf(TableBase.CACHED_TABLE);
 
                 return new StatementCommand(StatementTypes.SET_TABLE_INDEX,
                                             args, null,
@@ -921,17 +956,34 @@ public class ParserCommand extends ParserDDL {
 
                 int newType;
 
-                if (token.tokenType == Tokens.CACHED) {
-                    newType = TableBase.CACHED_TABLE;
-                } else if (token.tokenType == Tokens.MEMORY) {
-                    newType = TableBase.MEMORY_TABLE;
-                } else {
-                    throw super.unexpectedToken();
+                switch (token.tokenType) {
+
+                    case Tokens.MEMORY :
+                        newType = TableBase.MEMORY_TABLE;
+                        break;
+
+                    case Tokens.CACHED :
+                        newType = TableBase.CACHED_TABLE;
+                        break;
+
+                    default :
+                        throw unexpectedToken();
+                }
+
+                switch (table.getTableType()) {
+
+                    case TableBase.MEMORY_TABLE :
+                    case TableBase.CACHED_TABLE :
+                    case TableBase.TEXT_TABLE :
+                        break;
+
+                    default :
+                        throw unexpectedToken();
                 }
 
                 read();
 
-                args[1] = new Integer(newType);
+                args[1] = Integer.valueOf(newType);
 
                 return new StatementCommand(StatementTypes.SET_TABLE_TYPE,
                                             args, null,
@@ -972,7 +1024,7 @@ public class ParserCommand extends ParserDDL {
             case Tokens.SPACE : {
                 read();
 
-                Integer id = super.readIntegerObject();
+                Integer id = readIntegerObject();
 
                 args = new Object[] {
                     table.getName(), id
@@ -1060,7 +1112,7 @@ public class ParserCommand extends ParserDDL {
 
                 Integer  value = readIntegerObject();
                 Object[] args  = new Object[] {
-                    value, sqlLog
+                    value, Boolean.valueOf(sqlLog)
                 };
 
                 return new StatementCommand(
@@ -1078,15 +1130,34 @@ public class ParserCommand extends ParserDDL {
             }
             case Tokens.PASSWORD : {
                 read();
-                readThis(Tokens.CHECK);
-                readThis(Tokens.FUNCTION);
 
-                Routine  routine = readCreatePasswordCheckFunction();
-                Object[] args    = new Object[]{ routine };
+                switch (token.tokenType) {
 
-                return new StatementCommand(
-                    StatementTypes.SET_DATABASE_PASSWORD_CHECK, args, null,
-                    null);
+                    case Tokens.CHECK : {
+                        read();
+                        readThis(Tokens.FUNCTION);
+
+                        Routine  routine = readCreatePasswordCheckFunction();
+                        Object[] args    = new Object[]{ routine };
+
+                        return new StatementCommand(
+                            StatementTypes.SET_DATABASE_PASSWORD_CHECK, args,
+                            null, null);
+                    }
+                    case Tokens.DIGEST : {
+                        read();
+
+                        name = readQuotedString();
+
+                        Object[] args = new Object[]{ name };
+
+                        return new StatementCommand(
+                            StatementTypes.SET_DATABASE_PASSWORD_DIGEST, args,
+                            null, null);
+                    }
+                    default :
+                        throw unexpectedToken();
+                }
             }
             case Tokens.REFERENTIAL : {
                 read();
@@ -1108,6 +1179,22 @@ public class ParserCommand extends ParserDDL {
                 String  property = null;
 
                 switch (token.tokenType) {
+
+                    case Tokens.RESTRICT :
+                        read();
+                        readThis(Tokens.EXEC);
+
+                        property = HsqlDatabaseProperties.sql_restrict_exec;
+                        flag     = processTrueOrFalseObject();
+                        break;
+
+                    case Tokens.LIVE :
+                        read();
+                        readThis(Tokens.OBJECT);
+
+                        property = HsqlDatabaseProperties.sql_live_object;
+                        flag     = processTrueOrFalseObject();
+                        break;
 
                     case Tokens.NAMES :
                         read();
@@ -1167,6 +1254,14 @@ public class ParserCommand extends ParserDDL {
                         flag = processTrueOrFalseObject();
                         property =
                             HsqlDatabaseProperties.jdbc_translate_tti_types;
+                        break;
+
+                    case Tokens.CHARACTER :
+                        read();
+                        readThis(Tokens.LITERAL);
+
+                        flag     = processTrueOrFalseObject();
+                        property = HsqlDatabaseProperties.sql_char_literal;
                         break;
 
                     case Tokens.CONCAT_WORD :
@@ -1269,6 +1364,16 @@ public class ParserCommand extends ParserDDL {
                         flag = processTrueOrFalseObject();
                         break;
 
+                    case Tokens.SYS : {
+                        read();
+                        readThis(Tokens.INDEX);
+                        readThis(Tokens.NAMES);
+
+                        flag     = processTrueOrFalseObject();
+                        property = HsqlDatabaseProperties.sql_sys_index_names;
+
+                        break;
+                    }
                     default :
                         throw unexpectedToken();
                 }
@@ -1331,6 +1436,8 @@ public class ParserCommand extends ParserDDL {
 
                         mode = TransactionManager.LOCKS;
                         break;
+
+                    default :
                 }
 
                 HsqlName[] names =
@@ -1345,7 +1452,10 @@ public class ParserCommand extends ParserDDL {
             case Tokens.UNIQUE : {
                 read();
                 readThis(Tokens.NAME);
-                isUndelimitedSimpleName();
+
+                if (!isUndelimitedSimpleName()) {
+                    throw unexpectedToken();
+                }
 
                 name = token.tokenString;
 
@@ -1386,6 +1496,26 @@ public class ParserCommand extends ParserDDL {
 
         switch (token.tokenType) {
 
+            case Tokens.CHECK : {
+                read();
+
+                long longValue  = readBigint();
+                long longValue2 = -1;
+
+                type  = StatementTypes.SET_DATABASE_FILES_CHECK;
+                names = database.schemaManager.getCatalogNameArray();
+
+                if (readIfThis(Tokens.COMMA)) {
+                    longValue2 = readBigint();
+                }
+
+                Object[] args = new Object[2];
+
+                args[0] = Long.valueOf(longValue);
+                args[1] = Long.valueOf(longValue2);
+
+                return new StatementCommand(type, args, null, names);
+            }
             case Tokens.CACHE : {
                 read();
 
@@ -1407,15 +1537,6 @@ public class ParserCommand extends ParserDDL {
 
                 break;
             }
-            case Tokens.CHECK : {
-                read();
-
-                value = readIntegerObject();
-                type  = StatementTypes.SET_DATABASE_FILES_CHECK;
-                names = database.schemaManager.getCatalogNameArray();
-
-                break;
-            }
             case Tokens.SCALE : {
                 read();
 
@@ -1428,7 +1549,18 @@ public class ParserCommand extends ParserDDL {
             case Tokens.SPACE : {
                 read();
 
-                flag  = processTrueOrFalseObject();
+                if (token.tokenType == Tokens.TRUE) {
+                    flag = Boolean.TRUE;
+
+                    read();
+                } else if (token.tokenType == Tokens.FALSE) {
+                    flag = Boolean.FALSE;
+
+                    read();
+                } else {
+                    value = readIntegerObject();
+                }
+
                 type  = StatementTypes.SET_DATABASE_FILES_SPACE;
                 names = database.schemaManager.getCatalogAndBaseTableNames();
 
@@ -1522,7 +1654,7 @@ public class ParserCommand extends ParserDDL {
 
                     read();
                 } else {
-                    delay = this.readInteger();
+                    delay = readInteger();
 
                     if (delay < 0) {
                         delay = 0;
@@ -1535,7 +1667,7 @@ public class ParserCommand extends ParserDDL {
                     }
                 }
 
-                value = new Integer(delay);
+                value = Integer.valueOf(delay);
 
                 break;
             }
@@ -1546,11 +1678,11 @@ public class ParserCommand extends ParserDDL {
                 if (token.tokenType == Tokens.TEXT) {
                     read();
 
-                    value = new Integer(0);
+                    value = Integer.valueOf(0);
                 } else {
                     readThis(Tokens.COMPRESSED);
 
-                    value = new Integer(3);
+                    value = Integer.valueOf(3);
                 }
 
                 type = StatementTypes.SET_DATABASE_FILES_SCRIPT_FORMAT;
@@ -1563,8 +1695,8 @@ public class ParserCommand extends ParserDDL {
 
         Object[] args = new Object[2];
 
-        args[0] = flag == null ? (Object) value
-                               : (Object) flag;
+        args[0] = flag == null ? value
+                               : flag;
         args[1] = mode;
 
         return new StatementCommand(type, args, null, names);
@@ -1644,7 +1776,7 @@ public class ParserCommand extends ParserDDL {
                             throw unexpectedToken();
                     }
 
-                    args[1] = new Integer(level);
+                    args[1] = Integer.valueOf(level);
 
                     break;
                 }
@@ -1720,14 +1852,38 @@ public class ParserCommand extends ParserDDL {
     private Statement compileLock() {
 
         read();
-        readThis(Tokens.TABLE);
+
+        if (readIfThis(Tokens.CATALOG)) {
+            return compileLockCatalog();
+        } else {
+            readThis(Tokens.TABLE);
+
+            return compileLockTable();
+        }
+    }
+
+    private Statement compileLockCatalog() {
+
+        boolean isLock    = processTrueOrFalse();
+        int statementType = isLock ? StatementTypes.TRANSACTION_LOCK_CATALOG
+                                   : StatementTypes.TRANSACTION_UNLOCK_CATALOG;
+        HsqlName[] writeTableNames =
+            isLock ? database.schemaManager.getCatalogAndBaseTableNames()
+                   : null;
+        Statement cs = new StatementSession(statementType, null,
+                                            writeTableNames);
+
+        return cs;
+    }
+
+    private Statement compileLockTable() {
 
         OrderedHashSet readSet  = new OrderedHashSet();
         OrderedHashSet writeSet = new OrderedHashSet();
 
         outerloop:
         while (true) {
-            Table table = readTableName();
+            Table table = readTableName(true);
 
             switch (token.tokenType) {
 
@@ -1790,7 +1946,6 @@ public class ParserCommand extends ParserDDL {
 
             read();
 
-            String   sql  = getLastPart();
             Object[] args = new Object[]{ savepoint };
             Statement cs =
                 new StatementSession(StatementTypes.ROLLBACK_SAVEPOINT, args);
@@ -1832,7 +1987,6 @@ public class ParserCommand extends ParserDDL {
 
         read();
 
-        String   sql  = getLastPart();
         Object[] args = new Object[]{ name };
 
         return new StatementSession(StatementTypes.SAVEPOINT, args);
@@ -1847,7 +2001,6 @@ public class ParserCommand extends ParserDDL {
 
         read();
 
-        String   sql  = getLastPart();
         Object[] args = new Object[]{ name };
 
         return new StatementSession(StatementTypes.RELEASE_SAVEPOINT, args);
@@ -1891,6 +2044,7 @@ public class ParserCommand extends ParserDDL {
                 };
 
                 return new StatementSession(
+                    session, compileContext,
                     StatementTypes.SET_SESSION_AUTHORIZATION, args);
             }
             case Tokens.RESULT : {
@@ -1903,6 +2057,18 @@ public class ParserCommand extends ParserDDL {
 
                 return new StatementSession(
                     StatementTypes.SET_SESSION_RESULT_MEMORY_ROWS, args);
+            }
+            case Tokens.FEATURE : {
+                read();
+
+                String   feature = parseSQLFeatureValue();
+                Boolean  value   = processTrueOrFalseObject();
+                Object[] args    = new Object[] {
+                    feature, value
+                };
+
+                return new StatementSession(StatementTypes.SET_SESSION_FEATURE,
+                                            args);
             }
             default :
                 throw unexpectedToken();
@@ -1935,9 +2101,8 @@ public class ParserCommand extends ParserDDL {
             }
         }
 
-        String sql = getLastPart();
-
-        return new StatementSession(StatementTypes.SET_ROLE,
+        return new StatementSession(session, compileContext,
+                                    StatementTypes.SET_ROLE,
                                     new Expression[]{ e });
     }
 
@@ -1969,9 +2134,8 @@ public class ParserCommand extends ParserDDL {
             }
         }
 
-        String sql = getLastPart();
-
-        return new StatementSession(StatementTypes.SET_TIME_ZONE,
+        return new StatementSession(session, compileContext,
+                                    StatementTypes.SET_TIME_ZONE,
                                     new Expression[]{ e });
     }
 
@@ -2005,9 +2169,10 @@ public class ParserCommand extends ParserDDL {
                 read();
                 break;
 
-            // only semicolon is accepted here
+            default :
         }
 
+        // only semicolon is accepted here
         if (token.tokenType == Tokens.SEMICOLON) {
             read();
         }
@@ -2016,8 +2181,7 @@ public class ParserCommand extends ParserDDL {
             throw unexpectedToken();
         }
 
-        String   sql  = getLastPart();
-        Object[] args = new Object[]{ new Integer(closemode) };
+        Object[] args = new Object[]{ Integer.valueOf(closemode) };
         Statement cs = new StatementCommand(StatementTypes.DATABASE_SHUTDOWN,
                                             args, null, null);
 
@@ -2149,6 +2313,43 @@ public class ParserCommand extends ParserDDL {
                                             args, null, names);
 
         return cs;
+    }
+
+    private Statement compilePerform() {
+
+        Integer type   = Integer.valueOf(1);
+        Integer number = Integer.valueOf(-1);
+
+        read();
+
+        switch (token.tokenType) {
+
+            case Tokens.CHECK : {
+                read();
+
+                HsqlName tableName = null;
+
+                readThis(Tokens.TABLE);
+                readThis(Tokens.SPACE);
+
+                if (readIfThis(Tokens.AND)) {
+                    readThis("FIX");
+
+                    type = Integer.valueOf(2);
+                }
+
+                Object[] args = new Object[] {
+                    tableName, type, number
+                };
+                HsqlName[] names =
+                    database.schemaManager.getCatalogAndBaseTableNames();
+
+                return new StatementCommand(StatementTypes.CHECK_INDEX, args,
+                                            null, names);
+            }
+            default :
+                throw unexpectedToken();
+        }
     }
 
     private Statement compileCheckpoint() {
