@@ -1,4 +1,4 @@
-/* Copyright (c) 2001-2011, The HSQL Development Group
+/* Copyright (c) 2001-2016, The HSQL Development Group
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -46,7 +46,8 @@ import org.hsqldb.rowio.RowInputInterface;
  * data is read from and written to a text format data file.
  *
  * @author Bob Preston (sqlbob@users dot sourceforge.net)
- * @version 2.3.0
+ * @author Fred Toussi (fredt@users dot sourceforge.net)
+ * @version 2.3.4
  */
 public class TextTable extends Table {
 
@@ -98,55 +99,42 @@ public class TextTable extends Table {
 
         this.store = store;
 
-        TextCache      cache  = null;
-        TextFileReader reader = null;
+        TextCache      cache    = null;
+        TextFileReader reader   = null;
+        boolean        readOnly = isReadOnly || database.isReadOnly();
+        String securePath = database.logger.getSecurePath(dataSource, false,
+            true);
+
+        if (securePath == null) {
+            throw (Error.error(ErrorCode.ACCESS_IS_DENIED, dataSource));
+        }
 
         try {
-            cache = (TextCache) database.logger.openTextFilePersistence(this,
-                    dataSource, withReadOnlyData, isReversed);
+            cache =
+                (TextCache) database.logger.textTableManager
+                    .openTextFilePersistence(this, securePath, readOnly,
+                                             isReversed);
 
             store.setCache(cache);
 
             reader = cache.getTextFileReader();
 
             // read and insert all the rows from the source file
-            Row row     = null;
-            long nextpos = 0;
 
             if (cache.isIgnoreFirstLine()) {
-                nextpos += reader.readHeaderLine();
+                reader.readHeaderLine();
                 cache.setHeaderInitialise(reader.getHeaderLine());
             }
 
-            while (true) {
-                RowInputInterface rowIn = reader.readObject(nextpos);
-
-                if (rowIn == null) {
-                    break;
-                }
-
-                row = (Row) store.get(rowIn);
-
-                if (row == null) {
-                    break;
-                }
-
-                Object[] data = row.getData();
-
-                nextpos = (int) row.getPos() + row.getStorageSize();
-
-                systemUpdateIdentityValue(data);
-                enforceRowConstraints(session, data);
-                store.indexRow(session, row);
-            }
+            readDataIntoTable(session, store, reader);
         } catch (Throwable t) {
-            int linenumber = reader == null ? 0
-                                            : reader.getLineNumber();
+            long linenumber = reader == null ? 0
+                                             : reader.getLineNumber();
 
             clearAllData(session);
 
             if (cache != null) {
-                database.logger.closeTextCache(this);
+                database.logger.textTableManager.closeTextCache(this);
                 store.release();
             }
 
@@ -154,12 +142,35 @@ public class TextTable extends Table {
             // At this point table should either have a valid (old) data
             // source and cache or have an empty source and null cache.
             throw Error.error(t, ErrorCode.TEXT_FILE, 0, new Object[] {
-                new Integer(linenumber), t.toString()
+                Long.valueOf(linenumber), t.toString()
             });
         }
 
         isConnected = true;
         isReadOnly  = withReadOnlyData;
+    }
+
+    private void readDataIntoTable(Session session, PersistentStore store,
+                                   TextFileReader reader) {
+        while (true) {
+            RowInputInterface rowIn = reader.readObject();
+
+            if (rowIn == null) {
+                break;
+            }
+
+            Row row = (Row) store.get(rowIn);
+
+            if (row == null) {
+                break;
+            }
+
+            Object[] data = row.getData();
+
+            systemUpdateIdentityValue(data);
+            enforceRowConstraints(session, data);
+            store.indexRow(session, row);
+        }
     }
 
     /**
@@ -179,7 +190,7 @@ public class TextTable extends Table {
 
     /**
      * This method does some of the work involved with managing the creation
-     * and openning of the cache, the rest is done in Log.java and
+     * and opening of the cache, the rest is done in Log.java and
      * TextCache.java.
      *
      * Better clarification of the role of the methods is needed.
@@ -201,7 +212,7 @@ public class TextTable extends Table {
         isReversed = (isReversedNew && dataSource.length() > 0);
 
         try {
-            connect(session, isReadOnlyNew);
+            connect(session, isReadOnlyNew || isReversedNew);
         } catch (HsqlException e) {
             dataSource = dataSourceOld;
             isReversed = isReversedOld;
@@ -217,10 +228,11 @@ public class TextTable extends Table {
      * Reassigns only if the data source or direction has changed.
      */
     void setDataSource(Session session, String dataSourceNew,
-                                 boolean isReversedNew, boolean createFile) {
+                       boolean isReversedNew, boolean createFile) {
 
         if (getTableType() == Table.TEMP_TEXT_TABLE) {
-            ;
+
+            //
         } else {
             session.getGrantee().checkSchemaUpdateOrGrantRights(
                 getSchemaName().name);
@@ -282,7 +294,9 @@ public class TextTable extends Table {
     public void checkDataReadOnly() {
 
         if (dataSource.length() == 0) {
-            throw Error.error(ErrorCode.TEXT_TABLE_UNKNOWN_DATA_SOURCE);
+            String name = getName().getSchemaQualifiedStatementName();
+
+            throw Error.error(ErrorCode.TEXT_TABLE_UNKNOWN_DATA_SOURCE, name);
         }
 
         if (isDataReadOnly()) {
